--- a/app/views/people/_form.html.erb
+++ b/app/views/people/_form.html.erb
@@ -55,6 +55,10 @@
     <label>E-mail Confirmation</label><br />
     <%= f.text_field :email_confirmation %>
   </p>
+   <p>
+    <label>Passport</label><br />
+    <%= f.text_field :passport %>
+  </p>
   <p>
     <%= f.submit 'Save' %>
   </p>
